kustomize/base/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox
  labels:
    app: sandbox

spec:
  replicas: 3
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      serviceAccountName: sandbox
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.24.0
        command:
        - "/cloud_sql_proxy"
        - "-instances=gke-autopilot-blog:asia-northeast1:sandbox=tcp:5432"
        ports:
        - containerPort: 5432
      - name: pgcli
        image: postgres:13
        command:
        - "tail"
        - "-f"
        - "/dev/null"
