kustomize/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: sandbox
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'

spec:
  type: NodePort
  selector:
    app: sandbox
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
