kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sandbox
    networking.gke.io/managed-certificates: sandbox
    kubernetes.io/ingress.class: gce

spec:
  defaultBackend:
    service:
      name: sandbox
      port:
        number: 80
